--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -4,6 +4,7 @@
   "activePrompt": "Active Prompt",
   "add": "Add",
   "addPrompt": "Add Prompt",
+  "agentMaxIterationsLabel": "Agent Max Iterations",
   "apiProvider": "API",
   "append": "Append",
   "appendToSelection": "Append",
@@ -100,6 +101,7 @@
   "prompts": "Prompts",
   "providerLabel": "API Provider",
   "quickSettings": "Quick Settings",
+  "recursionLimitExceeded": "Agent exceeded the maximum number of iterations.",
   "replace": "Replace",
   "replaceSelectedText": "Replace",
   "replyLanguageLabel": "Reply In",
