--- a/src/i18n/locales/zh-cn.json
+++ b/src/i18n/locales/zh-cn.json
@@ -4,6 +4,7 @@
   "activePrompt": "当前默认提示词",
   "add": "添加",
   "addPrompt": "添加提示词",
+  "agentMaxIterationsLabel": "Agent 最大迭代次数",
   "apiProvider": "API",
   "append": "追加",
   "appendToSelection": "追加",
@@ -100,6 +101,7 @@
   "prompts": "提示词",
   "providerLabel": "API提供商",
   "quickSettings": "快速设置",
+  "recursionLimitExceeded": "Agent 超出最大迭代次数",
   "replace": "替换",
   "replaceSelectedText": "替换",
   "replyLanguageLabel": "回复语言",
