checkpoint UI interface

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -27,6 +27,7 @@
   "builtinPrompts": "Built-in Prompts",
   "builtinPromptsDescription": "Customize the system and user prompts for built-in tools like Translate, Polish, Academic, Summary, and Grammar. Use {language} for the target language placeholder and {text} for the selected text placeholder.",
   "cancel": "Cancel",
+  "checkPoints": "history records",
   "configuration": "Configuration",
   "confirm": "Confirm",
   "connect": "Connect",
@@ -75,6 +76,7 @@
   "newLine": "New line",
   "NoAction": "No action",
   "noAPIKey": "No API key provided",
+  "NocheckPoints": "No history records",
   "noToolsAvailable": "No tools available",
   "notSupportedProvider": "Unsupported API provider",
   "officialAPIKeyLabel": "API Key",
