--- a/src/i18n/locales/zh-cn.json
+++ b/src/i18n/locales/zh-cn.json
@@ -27,6 +27,7 @@
   "builtinPrompts": "内置提示词",
   "builtinPromptsDescription": "自定义内置工具的系统和用户提示词，如翻译、润色、学术、摘要和语法。使用 {language} 作为目标语言占位符，使用 {text}作为选中文本占位符。",
   "cancel": "取消",
+  "checkPoints": "历史记录",
   "configuration": "配置",
   "confirm": "确认",
   "connect": "连接",
@@ -75,6 +76,7 @@
   "newLine": "新行",
   "NoAction": "不操作",
   "noAPIKey": "未提供API密钥",
+  "NocheckPoints": "暂无历史记录",
   "noToolsAvailable": "暂无可用工具",
   "notSupportedProvider": "不支持的API提供商",
   "officialAPIKeyLabel": "API 密钥",
